Remove the possibility to send EU_COVID_CERT messages
